--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,21 +12,28 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
+    - name: Set up Lua environment
+      run: sudo apt-get update && sudo apt-get install -y lua5.1
 
-    - name: Install CurseForge Packager
-      run: npm install -g @wow/addon-packager
+    - name: Install BigWigsPackager
+      run: |
+        wget https://github.com/BigWigsMods/packager/archive/master.zip
+        unzip master.zip
+        mv packager-master BigWigsPackager
 
     - name: Build and Package
       run: |
         mkdir -p ./output
-        addon-packager --source ./SpellInspectMode --output ./output
+        ./BigWigsPackager/release.sh ./SpellInspectMode ./output
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
         name: addon-package
-        path: ./output
+        path: ./output/SpellInspectMode
+    
+    - name: Upload to CurseForge
+      env:
+        CF_API_KEY: ${{ secrets.CURSEFORGE_API_KEY }}
+      run: |
+        curl -X POST -H "x-api-key: $CF_API_KEY" -F "file=@./output/SpellInspectMode.zip" -F "metadata={\"changelog\":\"Changelog here\",\"releaseType\":\"release\",\"gameVersions\":[\"11.0.2\"]}" https://wow.curseforge.com/api/projects/1074689/upload-file
