--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Build and Package
       run: |
         mkdir -p ./output
-        ./BigWigsPackager/release.sh ./ ./output
+        ./BigWigsPackager/release.sh ./ ./
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
@@ -36,4 +36,4 @@ jobs:
       env:
         CF_API_KEY: ${{ secrets.CURSEFORGE_API_KEY }}
       run: |
-        curl -X POST -H "x-api-key: $CF_API_KEY" -F "file=@./output/SpellInspectMode.zip" -F "metadata={\"changelog\":\"Changelog here\",\"releaseType\":\"release\",\"gameVersions\":[\"11.0.2\"]}" https://wow.curseforge.com/api/projects/1074689/upload-file
+        curl -X POST -H "x-api-key: $CF_API_KEY" -F "file=@./SpellInspectMode.zip" -F "metadata={\"changelog\":\"Changelog here\",\"releaseType\":\"release\",\"gameVersions\":[\"11.0.2\"]}" https://wow.curseforge.com/api/projects/1074689/upload-file
