--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,8 @@ jobs:
     - name: Build and Package
       run: |
         mkdir -p ./output
-        ./BigWigsPackager/release.sh ./ ./
+        ./BigWigsPackager/release.sh ./ ./output
+        mv ./output/*.zip ./output/SpellInspectMode.zip
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
