--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         mkdir -p ./output
         ./BigWigsPackager/release.sh ./ ./output
-        mv ./output/*.zip ./output/SpellInspectMode.zip
+        mv ./.release/*.zip ./output/SpellInspectMode.zip
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
