--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,4 +37,4 @@ jobs:
       env:
         CF_API_KEY: ${{ secrets.CURSEFORGE_API_KEY }}
       run: |
-        curl -X POST -H "X-Api-Token: $CF_API_KEY" -F "file=@./output/SpellInspectMode.zip" -F "metadata={\"changelog\":\"Changelog here\",\"releaseType\":\"release\",\"gameVersions\":[\"11.0.2\"]}" https://wow.curseforge.com/api/projects/1074689/upload-file
+        curl -X POST -H "X-Api-Token: $CF_API_KEY" -F "file=@./output/SpellInspectMode.zip" -F "metadata={\"changelog\":\"Changelog here\",\"releaseType\":\"release\",\"gameVersions\":[517]}" https://wow.curseforge.com/api/projects/1074689/upload-file
