--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     env:
-      CF_API_KEY: ${{ secrets.CF_API_KEY }}
+      CF_API_KEY: ${{ secrets.CURSEFORGE_API_KEY }}
       GITHUB_OAUTH: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
     steps:
